css: fix left elements in header bar not aligned

--- a/css/shape.css
+++ b/css/shape.css
@@ -16,7 +16,7 @@
 }
 
 /* Reduce height of header bar */
-.DWzK6d, .gb_Uf > .gb_g, .gb_Uf, .Jrbdv {
+.DWzK6d, .gb_Uf > .gb_g, .gb_Uf, .Jrbdv, .C2Jvlf {
     height: 45px;
 }
 
